# sp1

./: APC_TESTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile.gnark-ffi  clippy.toml  rust-toolchain.toml
.claude/: CLAUDE.md
crates/core/autoprecompiles_common/: Cargo.toml
crates/core/autoprecompiles_common/src/: lib.rs
crates/core/compiler/: Cargo.toml
crates/core/compiler/src/: main.rs
crates/core/jit/: Cargo.toml
crates/core/jit/src/: context.rs  debug.rs  instructions.rs  lib.rs  macros.rs  risc.rs
crates/core/jit/src/backends/: debug.rs  mod.rs
crates/core/jit/src/backends/x86/: instruction_impl.rs  mod.rs  tests.rs  transpiler.rs
crates/core/machine/: Cargo.toml  testtest
crates/core/machine/src/: executor.rs  io.rs  lib.rs
crates/core/machine/src/adapter/: bump.rs  state.rs
crates/core/machine/src/adapter/register/: alu_type.rs  i_type.rs  j_type.rs  r_type.rs
crates/core/machine/src/air/: memory.rs  operation.rs  program.rs
crates/core/machine/src/alu/: alu_x0.rs  mod.rs
crates/core/machine/src/alu/add_sub/: add.rs  addi.rs  addw.rs  mod.rs  sub.rs  subw.rs
crates/core/machine/src/alu/bitwise/: mod.rs
crates/core/machine/src/alu/divrem/: mod.rs
crates/core/machine/src/alu/lt/: mod.rs
crates/core/machine/src/alu/mul/: mod.rs
crates/core/machine/src/alu/sll/: mod.rs
crates/core/machine/src/alu/sr/: mod.rs
crates/core/machine/src/autoprecompiles/: adapter.rs  air_stats.rs  air_to_symbolic_machine.rs  bus_interaction_handler.rs  bus_map.rs  candidate.rs  chip.rs  customize_exe.rs  instruction.rs  instruction_airs.rs  instruction_handler.rs  instruction_machine_handler.rs  interaction_builder.rs  memory_bus_interaction.rs  mod.rs  program.rs  utils.rs
crates/core/machine/src/autoprecompiles/chip/: apc_chip.rs  dummy.rs  mod.rs
crates/core/machine/src/autoprecompiles/tests/: compile_program.rs  machine_extraction.rs  mod.rs
crates/core/machine/src/autoprecompiles/tests/snapshot_tests/: complex.rs  mod.rs  pseudo_instructions.rs  single_instructions.rs
crates/core/machine/src/bytes/: air.rs  columns.rs  mod.rs  trace.rs
crates/core/machine/src/control_flow/branch/: air.rs  mod.rs  trace.rs
crates/core/machine/src/control_flow/jal/: air.rs  mod.rs  trace.rs
crates/core/machine/src/control_flow/jalr/: air.rs  columns.rs  mod.rs  trace.rs
crates/core/machine/src/global/: mod.rs
crates/core/machine/src/memory/: bump.rs  global.rs  local.rs  page_prot.rs  page_prot_global.rs  page_prot_local.rs
crates/core/machine/src/memory/consistency/: columns.rs  trace.rs
crates/core/machine/src/memory/instructions/: mod.rs
crates/core/machine/src/memory/instructions/load/: load_byte.rs  load_double.rs  load_half.rs  load_word.rs  load_x0.rs
crates/core/machine/src/memory/instructions/store/: store_byte.rs  store_double.rs  store_half.rs  store_word.rs
crates/core/machine/src/operations/: add.rs  address.rs  addrs_add.rs  addw.rs  baby_bear_word.rs  bitwise.rs  bitwise_u16.rs  global_accumulation.rs  global_interaction.rs  is_equal_word.rs  is_zero.rs  is_zero_word.rs  mod.rs  msb.rs  mul.rs  page.rs  slt.rs  sub.rs  subw.rs  u16_compare.rs  u16_operation.rs
crates/core/machine/src/operations/field/: field_den.rs  field_inner_product.rs  field_op.rs  field_sqrt.rs
crates/core/machine/src/operations/poseidon2/: mod.rs  permutation.rs
crates/core/machine/src/program/: instruction.rs  instruction_decode.rs  instruction_fetch.rs  mod.rs  trusted.rs
crates/core/machine/src/range/: mod.rs  trace.rs
crates/core/machine/src/riscv/: mod.rs
crates/core/machine/src/syscall/: chip.rs
crates/core/machine/src/syscall/instructions/: air.rs  columns.rs  mod.rs  trace.rs
crates/core/machine/src/utils/: concurrency.rs  logger.rs  mod.rs  prove.rs  test.rs  zerocheck_unit_test.rs
crates/core/machine/src/utype/: mod.rs
crates/core/machine/tests/: extracted_constraints.txt
crates/core/machine/tests/apc_snapshots/: add.txt  addi.txt  and.txt  auipc.txt  beq.txt  bge.txt  bgeu.txt  blt.txt  bltu.txt  bne.txt  div.txt  divu.txt  jal.txt  jalr.txt  lb.txt  lbu.txt  lh.txt  lhu.txt  lui.txt  lw.txt  memory_optimizer.txt  mul.txt  mulh.txt  mulhsu.txt  mulhu.txt  or.txt  rem.txt  remu.txt  sb.txt  sh.txt  sll.txt  slt.txt  sltu.txt  sltui.txt  sra.txt  srl.txt  sub.txt  sw.txt  two_ld.txt  xor.txt
crates/core/machine/tests/apc_snapshots/complex/: keccak_permutation.txt  keccak_permutation_initial_stores.txt  keccak_permutation_rot63.txt  keccak_permutation_xor_chain.txt  memory_optimizer.txt  stack_accesses.txt  two_ld.txt
crates/core/machine/tests/apc_snapshots/pseudo_instructions/: beqz.txt  bgez.txt  bgtz.txt  blez.txt  bltz.txt  bnez.txt  j.txt  jr.txt  mv.txt  neg.txt  not.txt  ret.txt  seqz.txt  sgtz.txt  sltz.txt  snez.txt
crates/core/machine/tests/apc_snapshots/single_instructions/: add.txt  addi.txt  and.txt  auipc.txt  beq.txt  bge.txt  bgeu.txt  blt.txt  bltu.txt  bne.txt  div.txt  divu.txt  jal.txt  jalr.txt  lb.txt  lbu.txt  lh.txt  lhu.txt  lui.txt  lw.txt  mul.txt  mulh.txt  mulhsu.txt  mulhu.txt  or.txt  rem.txt  remu.txt  sb.txt  sh.txt  sll.txt  slt.txt  sltu.txt  sltui.txt  sra.txt  srl.txt  sub.txt  sw.txt  xor.txt
crates/derive/: Cargo.toml
crates/derive/src/: input_params.rs  lib.rs
crates/test-artifacts/programs/cycle-tracker/: Cargo.toml
crates/test-artifacts/programs/cycle-tracker/src/: main.rs
crates/test-artifacts/programs/keccak256/: Cargo.toml
crates/zkvm/lib/: Cargo.toml
crates/zkvm/lib/src/: lib.rs  secp256r1.rs  septic.rs  utils.rs
crates/zkvm/lib/src/ecdsa/: affine.rs  projective.rs
patch-testing/RustCrypto-rsa/program/: Cargo.toml
patch-testing/keccak/program/: Cargo.toml
patch-testing/sha/: Cargo.toml
patch-testing/sha/program/: Cargo.toml
patch-testing/sha/src/: lib.rs
patch-testing/sp1-test-macro/: Cargo.toml
patch-testing/sp1-test-macro/src/: attr.rs  lib.rs
slop/crates/stacked/: Cargo.toml
slop/crates/stacked/src/: fixed_rate.rs  lib.rs  prover.rs  verifier.rs
slop/crates/tensor/: Cargo.toml
slop/crates/tensor/src/: dot.rs  inner.rs  reduce.rs  sum.rs
(+654 files in other folders)
