[workspace.package]
version = "6.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/succinctlabs/sp1"
keywords = ["sp1", "succinct", "zero-knowledge", "zkvm"]
categories = ["cryptography"]
include = ["SP1_VERSION"]

[workspace]
members = [
  "crates/build",
  "crates/cli",
  "crates/core/executor",
  "crates/core/machine",
  "crates/recursion/circuit",
  "crates/recursion/compiler",
  "crates/recursion/derive",
  "crates/recursion/executor",
  "crates/recursion/gnark-ffi",
  "crates/recursion/machine",
  "crates/curves",
  "crates/derive",
  "crates/helper",
  "crates/prover",
  "crates/stark",
  "crates/test-artifacts",
  "crates/zkvm/*",
  "crates/sdk",
  "crates/primitives",
  "crates/cuda",
  "crates/cli",
  "crates/core/compiler",
  "crates/perf"
  # "crates/verifier",
]
exclude = [
  "examples/target",
  "crates/eval",
  "crates/recursion/circuit-old",
  "crates/recursion/gnark-cli",
  # "crates/verifier",
]
resolver = "2"

[profile.release]
opt-level = 3

[profile.bench]
opt-level = 3

[profile.fast]
inherits = "release"
debug = true
debug-assertions = true

[workspace.dependencies]
sp1-build = { path = "crates/build", version = "6.0.0" }
sp1-cli = { path = "crates/cli", version = "6.0.0", default-features = false }
sp1-core-machine = { path = "crates/core/machine", version = "6.0.0" }
sp1-core-executor = { path = "crates/core/executor", version = "6.0.0" }
sp1-curves = { path = "crates/curves", version = "6.0.0" }
sp1-derive = { path = "crates/derive", version = "6.0.0" }
sp1-eval = { path = "crates/eval", version = "6.0.0" }
sp1-helper = { path = "crates/helper", version = "6.0.0", default-features = false }
sp1-primitives = { path = "crates/primitives", version = "6.0.0" }
sp1-prover = { path = "crates/prover", version = "6.0.0" }
sp1-recursion-compiler = { path = "crates/recursion/compiler", version = "6.0.0" }
sp1-recursion-core = { path = "crates/recursion/core", version = "6.0.0" }
sp1-recursion-derive = { path = "crates/recursion/derive", version = "6.0.0", default-features = false }
sp1-recursion-gnark-ffi = { path = "crates/recursion/gnark-ffi", version = "6.0.0", default-features = false }
sp1-recursion-circuit = { path = "crates/recursion/circuit", version = "6.0.0", default-features = false }
sp1-recursion-executor = { path = "crates/recursion/executor", version = "6.0.0", default-features = false }
sp1-recursion-machine = { path = "crates/recursion/machine", version = "6.0.0", default-features = false }
sp1-sdk = { path = "crates/sdk", version = "6.0.0" }
sp1-cuda = { path = "crates/cuda", version = "6.0.0" }
sp1-stark = { path = "crates/stark", version = "6.0.0" }
sp1-lib = { path = "crates/zkvm/lib", version = "6.0.0", default-features = false }
sp1-zkvm = { path = "crates/zkvm/entrypoint", version = "6.0.0", default-features = false }
sp1-zkvm-64 = { path = "crates/zkvm/entrypoint64", version = "6.0.0", default-features = false }

# slop
slop-algebra = { git = "https://github.com/succinctlabs/slop" }
slop-alloc = { git = "https://github.com/succinctlabs/slop"  }
slop-basefold = { git = "https://github.com/succinctlabs/slop" }
slop-basefold-prover = { git = "https://github.com/succinctlabs/slop" }
slop-commit = { git = "https://github.com/succinctlabs/slop" }
slop-jagged = { git = "https://github.com/succinctlabs/slop" }
slop-sumcheck = { git = "https://github.com/succinctlabs/slop" }
slop-stacked = { git = "https://github.com/succinctlabs/slop" }
slop-tensor = { git = "https://github.com/succinctlabs/slop" }
slop-multilinear = { git = "https://github.com/succinctlabs/slop" }
slop-challenger = { git = "https://github.com/succinctlabs/slop" }
slop-air = { git = "https://github.com/succinctlabs/slop" }
slop-matrix = { git = "https://github.com/succinctlabs/slop" }
slop-baby-bear = { git = "https://github.com/succinctlabs/slop" }
slop-bn254 = { git = "https://github.com/succinctlabs/slop" }
slop-symmetric = { git = "https://github.com/succinctlabs/slop" }
slop-merkle-tree = { git = "https://github.com/succinctlabs/slop" }
slop-futures = { git = "https://github.com/succinctlabs/slop" }
slop-maybe-rayon = { git = "https://github.com/succinctlabs/slop" }
slop-poseidon2 = { git = "https://github.com/succinctlabs/slop" }
slop-uni-stark = { git = "https://github.com/succinctlabs/slop" }
slop-keccak-air = { git = "https://github.com/succinctlabs/slop" }

# For local development.
# slop-algebra = { path = "../slop/crates/algebra" }
# slop-alloc = { path = "../slop/crates/alloc" }
# slop-basefold = { path = "../slop/crates/basefold" }
# slop-bn254 = { path = "../slop/crates/bn254" }
# slop-basefold-prover = { path = "../slop/crates/basefold-prover" }
# slop-commit = { path = "../slop/crates/commit" }
# slop-jagged = { path = "../slop/crates/jagged" }
# slop-fri = { path = "../slop/crates/fri" }
# slop-sumcheck = { path = "../slop/crates/sumcheck" }
# slop-stacked = { path = "../slop/crates/stacked" }
# slop-tensor = { path = "../slop/crates/tensor" }
# slop-multilinear = { path = "../slop/crates/multilinear" }
# slop-challenger = { path = "../slop/crates/challenger" }
# slop-air = { path = "../slop/crates/air" }
# slop-matrix = { path = "../slop/crates/matrix" }
# slop-baby-bear = { path = "../slop/crates/baby-bear" }
# slop-symmetric = { path = "../slop/crates/symmetric" }
# slop-merkle-tree = { path = "../slop/crates/merkle-tree" }
# slop-futures = { path = "../slop/crates/futures" }
# slop-maybe-rayon = { path = "../slop/crates/maybe-rayon" }
# slop-poseidon2 = { path = "../slop/crates/poseidon2" }
# slop-uni-stark = { path = "../slop/crates/uni-stark" }
# slop-keccak-air = { path = "../slop/crates/keccak-air" }

# For testing.
test-artifacts = { path = "crates/test-artifacts" }


# misc
hashbrown = "0.14.5"
itertools = "0.13.0"
serde = "1.0.204"
serde_json = "1.0.132"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = "1.42.0"
futures = "0.3"
derive-where = "1.2.7"
strum_macros = "0.27.1"
strum = "0.27.1"
blake3 = { version = "1.6.1", default-features = false }

[workspace.metadata.typos]
default.extend-ignore-re = [
  "Jo-Philipp Wich",
  "SubEIN",
  "DivEIN",
  "CommitCommitedValuesDigest",
  "numer",
]
default.extend-ignore-words-re = ["(?i)groth", "TRE"]

[workspace.lints.clippy]
print_stdout = "deny"
