[package]
name = "sha"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
sp1-zkvm = { workspace = true }
sp1-sdk = { workspace = true, default-features = true }
sp1-core-executor = { workspace = true }

sha2 = { workspace = true }
rand = { workspace = true }
sp1-test = { workspace = true }
tokio = { workspace = true }
color-eyre = { workspace = true }
sha3 = { workspace = true }

[features]
prove = []
gpu = ["sp1-sdk/cuda"]


[build-dependencies]
sp1-build = { workspace = true }
