[package]
name = "sp1-test-macro"
version = "0.0.1"
description = "The SP1 test macro creates new rust tests for each proof type and prover type."
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["printing"] }
