[package]
name = "sp1-core-machine"
description = "SP1 is a performant, 100% open-source, contributor-friendly zkVM."
readme = "../../../README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
bincode = "1.3.3"
rand = "0.8.5"
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
itertools = { workspace = true }
num = { version = "0.4.3" }
cargo_metadata = "0.18.1"
slop-air = { workspace = true }
slop-baby-bear = { workspace = true }
slop-algebra = { workspace = true }
slop-keccak-air = { workspace = true }
slop-matrix = { workspace = true }
slop-maybe-rayon = { workspace = true }
slop-uni-stark = { workspace = true }
sp1-derive = { workspace = true }
sp1-primitives = { workspace = true }
sp1-build = { workspace = true }

# Powdr CLI dependencies
clap = { version = "^4.3", features = ["derive"] }
eyre = "0.6.12"
serde_cbor = "0.11.2"
metrics-tracing-context = "0.16.0"

powdr-autoprecompiles = { workspace = true }
powdr-number = { workspace = true }
powdr-expression = { workspace = true }
powdr-constraint-solver = { workspace = true }
powdr-riscv-elf = { workspace = true }

struct-reflection = { git = "https://github.com/gzanitti/struct-reflection-rs.git" }

slop-futures = { workspace = true }

rayon = "1.10.0"
rayon-scan = "0.1.1"

amcl = { package = "snowbridge-amcl", version = "1.0.2", default-features = false, features = [
  "bls381",
] }
cfg-if = "1.0.0"
generic-array = { version = "=1.1.0", features = ["alloc", "serde"] }
typenum = "1.17.0"

num_cpus = "1.16.0"
tempfile = "3.10.1"
tracing = { workspace = true }
tracing-forest = { version = "0.1.6", features = ["ansi", "smallvec"] }
tracing-subscriber = { workspace = true, features = ["std", "env-filter"] }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = "1.0.63"
hashbrown = { workspace = true, features = ["serde", "inline-more"] }

sp1-stark = { workspace = true }
sp1-core-executor = { workspace = true }
sp1-curves = { workspace = true }
slop-poseidon2 = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4.0"
num = { version = "0.4.3", features = ["rand"] }
sp1-core-executor = { workspace = true }
test-artifacts = { workspace = true }
tokio = { workspace = true }
slop-air = { workspace = true }
slop-baby-bear = { workspace = true }
slop-algebra = { workspace = true }
slop-matrix = { workspace = true }
slop-jagged = { workspace = true }

[build-dependencies]
sp1-stark = { workspace = true }
sp1-primitives = { workspace = true }
slop-baby-bear = { workspace = true }

[features]
debug = []
bigint-rug = ["sp1-curves/bigint-rug"]

[lib]
path = "src/lib.rs"
bench = false

[[bin]]
name = "powdr_sp1"
path = "src/autoprecompiles/bin/cli.rs"

[lints]
workspace = true
