[package]
name = "slop-tensor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
slop-alloc = { workspace = true }
slop-algebra = { workspace = true }
slop-matrix = { workspace = true }
slop-futures = { workspace = true }

rayon = { workspace = true }
transpose = { workspace = true }
arrayvec = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
itertools = { workspace = true }
derive-where = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
slop-baby-bear = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
