[package]
name = "cycle-tracker-test"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
sp1-zkvm = { path = "../../../../crates/zkvm/entrypoint" }
sp1-derive = { path = "../../../../crates/derive" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2", features = [
    "keccak",
] }
