[package]
name = "keccak256-test"
version = "1.1.0"
edition = "2021"
publish = false

[dependencies]
sp1-zkvm = { package = "sp1-zkvm-64", path = "../../../../crates/zkvm/entrypoint64" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", rev = "patch-2.0.2-sp1-6.0.0", features = [
  "keccak",
] }
